fixed some spacing issues

--- a/ui/client-react/src/components/builder/builderMenus/fieldProperties.scss
+++ b/ui/client-react/src/components/builder/builderMenus/fieldProperties.scss
@@ -14,10 +14,13 @@
         height: 24px;
         font-size: 20px;
         color: $default-text-onlight-color;
+        overflow: hidden;
+        white-space: nowrap;
+        text-overflow: ellipsis;
     }
 
     .fieldPropertyContainer {
-        padding-top: 25px;
+        padding-top: 20px;
 
         .textPropertyTitle {
             margin-bottom: 7px;
@@ -38,11 +41,13 @@
         textarea {
             overflow-x: scroll;
             overflow-wrap: normal;
+            white-space: pre;
+            resize: none;
         }
     }
 
     .checkboxPropertyContainer {
-        padding-top: 20px;
+        padding-top: 25px;
     }
 
     @include small-breakpoint {
